--- a/QuickZip/QuickZip.csproj
+++ b/QuickZip/QuickZip.csproj
@@ -254,13 +254,17 @@
     <Compile Include="ClientApp\Models\OldEmandate\Banklist.cs" />
     <Compile Include="Controllers\AllUMRNController.cs" />
     <Compile Include="Controllers\BankFormController.cs" />
+    <Compile Include="Controllers\BulkEMandateController.cs" />
     <Compile Include="Controllers\DownloadEmandateController.cs" />
     <Compile Include="Controllers\DownloadMandateController.cs" />
     <Compile Include="Controllers\DownloadoldemandateController.cs" />
+    <Compile Include="Controllers\EntityBankController.cs" />
+    <Compile Include="Controllers\EntitySetupController.cs" />
     <Compile Include="Controllers\HistoricalMandateController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LinkSetupController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\NachtransactionPresentationController.cs" />
     <Compile Include="Controllers\OldMandateController.cs" />
     <Compile Include="Controllers\ReportViewController.cs" />
     <Compile Include="Controllers\UMRNHistoryController.cs" />
@@ -795,6 +799,9 @@
     <Compile Include="Models\BankForm\BindLogincheck.cs" />
     <Compile Include="Models\BankForm\BindLogoImageDetails.cs" />
     <Compile Include="Models\BankForm\BindSponserCode.cs" />
+    <Compile Include="Models\BulkEmandate\BulkEmandateAttribute.cs" />
+    <Compile Include="Models\BulkEmandate\BulkEMandateClass.cs" />
+    <Compile Include="Models\BulkEmandate\BulkEmandateTabledatacount.cs" />
     <Compile Include="Models\CommonFlag.cs" />
     <Compile Include="Models\DownloadEmandate\DownloadEmandateaccesslayer.cs" />
     <Compile Include="Models\DownloadEmandate\Downloademandatebank.cs" />
@@ -802,6 +809,16 @@
     <Compile Include="Models\DownloadMandate\DownloadMandate.cs" />
     <Compile Include="Models\DownloadMandate\DownloadMandateDetails.cs" />
     <Compile Include="Models\DownloadMandate\DownloadMandateGridDetails.cs" />
+    <Compile Include="Models\EntityBankSetup\Bank.cs" />
+    <Compile Include="Models\EntityBankSetup\Entity.cs" />
+    <Compile Include="Models\EntityBankSetup\EntityBank.cs" />
+    <Compile Include="Models\EntityBankSetup\EntityData.cs" />
+    <Compile Include="Models\EntitySetup\AllFieldOfForm.cs" />
+    <Compile Include="Models\EntitySetup\BindBank.cs" />
+    <Compile Include="Models\EntitySetup\BindCountry.cs" />
+    <Compile Include="Models\EntitySetup\EntityBusinessCode.cs" />
+    <Compile Include="Models\EntitySetup\EntitySetupDataAccess.cs" />
+    <Compile Include="Models\EntitySetup\MainGrid.cs" />
     <Compile Include="Models\ForgotPassword\Forgotflag.cs" />
     <Compile Include="Models\ForgotPassword\UserDetails.cs" />
     <Compile Include="Models\ForgotPassword\Value.cs" />
@@ -813,6 +830,16 @@
     <Compile Include="Models\Login\Login.cs" />
     <Compile Include="Models\Login\Logindetails.cs" />
     <Compile Include="Models\Login\SaveLoginSessionTrxn.cs" />
+    <Compile Include="Models\nachtransactionpresentation\NachTransactionBindRef.cs" />
+    <Compile Include="Models\nachtransactionpresentation\NachTransactionBindRefOnChange.cs" />
+    <Compile Include="Models\nachtransactionpresentation\NachTransactionBindRow.cs" />
+    <Compile Include="Models\nachtransactionpresentation\NachTransactionBindUMRN.cs" />
+    <Compile Include="Models\nachtransactionpresentation\NachTransactionCheckUser.cs" />
+    <Compile Include="Models\nachtransactionpresentation\NachTransactionMainGrid.cs" />
+    <Compile Include="Models\nachtransactionpresentation\nachtransactionpresentation.cs" />
+    <Compile Include="Models\nachtransactionpresentation\nachtransactionpresentationaccesslayer.cs" />
+    <Compile Include="Models\nachtransactionpresentation\NachTransactionPrsentationBindForm.cs" />
+    <Compile Include="Models\nachtransactionpresentation\NachTransactionUMRNOnChange.cs" />
     <Compile Include="Models\OldEmandate\BankBind.cs" />
     <Compile Include="Models\OldEmandate\Downloadoldemandateaccesslayer.cs" />
     <Compile Include="Models\OldEmandate\Searchdata.cs" />
@@ -987,18 +1014,26 @@
     <TypeScriptCompile Include="ClientApp\app\Services\Allumrn\allumrn.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\Services\auth-guard.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\Services\BankForm\bank-form.service.ts" />
+    <TypeScriptCompile Include="ClientApp\app\Services\BulkEMandate\buld-emandate.service.spec.ts" />
+    <TypeScriptCompile Include="ClientApp\app\Services\BulkEMandate\buld-emandate.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\Services\DownloadEmandate\download-emandate-service.service.spec.ts" />
     <TypeScriptCompile Include="ClientApp\app\Services\DownloadEmandate\download-emandate-service.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\Services\downloadmandate\downloadmandate.service.spec.ts" />
     <TypeScriptCompile Include="ClientApp\app\Services\downloadmandate\downloadmandate.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\Services\downloadoldemandate\downloadoldemandate.service.spec.ts" />
     <TypeScriptCompile Include="ClientApp\app\Services\downloadoldemandate\downloadoldemandate.service.ts" />
+    <TypeScriptCompile Include="ClientApp\app\Services\Enity_Setup\entity-setup-service.service.spec.ts" />
+    <TypeScriptCompile Include="ClientApp\app\Services\Enity_Setup\entity-setup-service.service.ts" />
+    <TypeScriptCompile Include="ClientApp\app\Services\EntityBankSetup\entity-bank.service.spec.ts" />
+    <TypeScriptCompile Include="ClientApp\app\Services\EntityBankSetup\entity-bank.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\Services\Historical-Mandate\historical-mandate-service.service.spec.ts" />
     <TypeScriptCompile Include="ClientApp\app\Services\Historical-Mandate\historical-mandate-service.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\Services\Link-setup\link-setup.service.spec.ts" />
     <TypeScriptCompile Include="ClientApp\app\Services\Link-setup\link-setup.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\Services\login-service.service.spec.ts" />
     <TypeScriptCompile Include="ClientApp\app\Services\login-service.service.ts" />
+    <TypeScriptCompile Include="ClientApp\app\Services\nachtransactionpresentation\nachtransactionporesentation.service.spec.ts" />
+    <TypeScriptCompile Include="ClientApp\app\Services\nachtransactionpresentation\nachtransactionporesentation.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\Services\oldmandate\oldmandate.service.spec.ts" />
     <TypeScriptCompile Include="ClientApp\app\Services\oldmandate\oldmandate.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\Services\report-vew\report-view.service.spec.ts" />
@@ -1032,14 +1067,25 @@
     <TypeScriptCompile Include="ClientApp\Models\BankForm\BindSponserCode.ts" />
     <TypeScriptCompile Include="ClientApp\Models\BankForm\CheckReference.ts" />
     <TypeScriptCompile Include="ClientApp\Models\BankForm\SaveData.ts" />
+    <TypeScriptCompile Include="ClientApp\Models\BulkEmandate\BulkEmandateAttributeClass.ts" />
     <TypeScriptCompile Include="ClientApp\Models\DownloadEmandate\DownloadEmandate.ts" />
     <TypeScriptCompile Include="ClientApp\Models\DownloadMandate\download-mandate-details.ts" />
     <TypeScriptCompile Include="ClientApp\Models\DownloadMandate\downloadmandategrid.ts" />
+    <TypeScriptCompile Include="ClientApp\Models\EntityBankSetup\bank.ts" />
+    <TypeScriptCompile Include="ClientApp\Models\EntityBankSetup\entity-data.ts" />
+    <TypeScriptCompile Include="ClientApp\Models\EntityBankSetup\entity.ts" />
+    <TypeScriptCompile Include="ClientApp\Models\Entity_Setup\bind-bank.ts" />
+    <TypeScriptCompile Include="ClientApp\Models\Entity_Setup\bind-city.ts" />
+    <TypeScriptCompile Include="ClientApp\Models\Entity_Setup\bind-country.ts" />
+    <TypeScriptCompile Include="ClientApp\Models\Entity_Setup\bind-state.ts" />
+    <TypeScriptCompile Include="ClientApp\Models\Entity_Setup\entity-business-code.ts" />
+    <TypeScriptCompile Include="ClientApp\Models\Entity_Setup\main-grid.ts" />
     <TypeScriptCompile Include="ClientApp\Models\global-error-handler.ts" />
     <TypeScriptCompile Include="ClientApp\Models\Historical-Mandate\historical-mandate-class.ts" />
     <TypeScriptCompile Include="ClientApp\Models\Link-setup\BindGrid.ts" />
     <TypeScriptCompile Include="ClientApp\Models\Link-setup\IconName.ts" />
     <TypeScriptCompile Include="ClientApp\Models\Login\logindetails.ts" />
+    <TypeScriptCompile Include="ClientApp\Models\nachtransactionpresentation\nachtransactionpresentation.ts" />
     <TypeScriptCompile Include="ClientApp\Models\Old-Mandate\OldMandateClass1.ts" />
     <TypeScriptCompile Include="ClientApp\Models\Old-Mandate\OldMandateTable.ts" />
     <TypeScriptCompile Include="ClientApp\Models\OldEmandate\Bankbind.ts" />
